--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -156,6 +156,23 @@
   number = {3}
 }
 
+@article{azumaHeightrelatedVariationsLeaf2019,
+  title = {Height-Related Variations of Leaf Traits Reflect Strategies for Maintaining Photosynthetic and Hydraulic Homeostasis in Mature and Old {{Pinus}} Densiflora Trees},
+  author = {Azuma, Wakana and Ishii, H. Roaki and Masaki, Takashi},
+  date = {2019-02-01},
+  journaltitle = {Oecologia},
+  volume = {189},
+  pages = {317--328},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-018-4325-x},
+  url = {https://doi.org/10.1007/s00442-018-4325-x},
+  urldate = {2021-01-04},
+  abstract = {Because tree size and age co-vary, it is difficult to separate their effects on growth and physiological function. To infer causes for age-related height-growth decline, we compared various leaf traits between mature (ca. 100~years) and old (ca. 300~years) trees of Pinus densiflora, having similar heights (ca. 30~m) and growing in the same stand. For many leaf traits, mature and old trees showed similar height-related trends reflecting acclimation to height-related hydraulic limitation for maintaining photosynthetic and hydraulic homeostasis. Photosynthetic capacity was constant within crowns of both age-classes, though 4.9–5.4~μmol CO2 m−2~s−1 lower for old than for mature trees. Biochemical acclimation of photosynthesis, allocating more nitrogen to treetop leaves, was observed only for mature trees. Leaf turgor loss point was also constant within crowns of both age-classes with no significant effect of age on leaf hydraulic traits. In mature trees, leaf capacitance increased, while bulk tissue elastic modulus decreased with height, whereas opposite height-related trends were observed for old trees. For both age-classes, leaf mass per area (LMA), transfusion-tissue area, and xylem area all increased with height, but LMA was ca. 30~g~m−2 greater for old than for mature trees. In old trees, mesophyll area decreased with height, suggesting anatomical acclimation to height may negatively affect photosynthetic capacity. We inferred that old trees rely more on morphological than biochemical acclimation and that such post-maturational shift in resource allocation could underlie height-growth decline of P. densiflora after reproductive maturity.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\YGPAP2HC\\Azuma et al. - 2019 - Height-related variations of leaf traits reflect s.pdf},
+  langid = {english},
+  number = {2}
+}
+
 @article{bachofenLightVPDGradients2020,
   title = {Light and {{VPD}} Gradients Drive Foliar Nitrogen Partitioning and Photosynthesis in the Canopy of {{European}} Beech and Silver Fir},
   author = {Bachofen, Christoph and D’Odorico, Petra and Buchmann, Nina},
@@ -366,6 +383,23 @@
   url = {https://science.sciencemag.org/content/301/5630/183.abstract},
   urldate = {2020-09-28},
   file = {C\:\\Users\\Me\\Zotero\\storage\\PRKSZLZ4\\183.html}
+}
+
+@article{blanchardContrastedAllometriesStem2016,
+  title = {Contrasted Allometries between Stem Diameter, Crown Area, and Tree Height in Five Tropical Biogeographic Areas},
+  author = {Blanchard, Elodie and Birnbaum, Philippe and Ibanez, Thomas and Boutreux, Thomas and Antin, Cécile and Ploton, Pierre and Vincent, Grégoire and Pouteau, Robin and Vandrot, Hervé and Hequet, Vanessa and Barbier, Nicolas and Droissart, Vincent and Sonké, Bonaventure and Texier, Nicolas and Kamdem, Narcisse Guy and Zebaze, Donatien and Libalah, Moses and Couteron, Pierre},
+  date = {2016-12-01},
+  journaltitle = {Trees},
+  volume = {30},
+  pages = {1953--1968},
+  issn = {1432-2285},
+  doi = {10.1007/s00468-016-1424-3},
+  url = {https://doi.org/10.1007/s00468-016-1424-3},
+  urldate = {2021-01-04},
+  abstract = {Across five biogeographic areas, DBH-CA allometry was characterized by inter-site homogeneity and intra-site heterogeneity, whereas the reverse was observed for DBH-H allometry.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\RNPNR93J\\Blanchard et al. - 2016 - Contrasted allometries between stem diameter, crow.pdf},
+  langid = {english},
+  number = {6}
 }
 
 @article{bolstad_foliar_1999,
@@ -954,6 +988,23 @@
   pmcid = {PMC3832027}
 }
 
+@article{derroireContrastingPatternsLeaf2018,
+  title = {Contrasting Patterns of Leaf Trait Variation among and within Species during Tropical Dry Forest Succession in {{Costa Rica}}},
+  author = {Derroire, Géraldine and Powers, Jennifer S. and Hulshof, Catherine M. and Cárdenas Varela, Luis E. and Healey, John R.},
+  date = {2018-01-10},
+  journaltitle = {Sci Rep},
+  volume = {8},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-017-18525-1},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5762662/},
+  urldate = {2021-01-04},
+  abstract = {A coordinated response to environmental drivers amongst individual functional traits is central to the plant strategy concept. However, whether the trait co-ordination observed at the global scale occurs at other ecological scales (especially within species) remains an open question. Here, for sapling communities of two tropical dry forest types in Costa Rica, we show large differences amongst traits in the relative contribution of species turnover and intraspecific variation to their directional changes in response to environmental changes along a successional gradient. We studied the response of functional traits associated with the leaf economics spectrum and drought tolerance using intensive sampling to analyse inter- and intra-specific responses to environmental changes and ontogeny. Although the overall functional composition of the sapling communities changed during succession more through species turnover than through intraspecific trait variation, their relative contributions differed greatly amongst traits. For instance, community mean specific leaf area changed mostly due to intraspecific variation. Traits of the leaf economics spectrum showed decoupled responses to environmental drivers and ontogeny. These findings emphasise how divergent ecological mechanisms combine to cause great differences in changes of individual functional traits over environmental gradients and ecological scales.},
+  eprint = {29321479},
+  eprinttype = {pmid},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\F7J7B8GL\\Derroire et al. - 2018 - Contrasting patterns of leaf trait variation among.pdf},
+  pmcid = {PMC5762662}
+}
+
 @article{doEnvironmentalInfluenceCanopy2005,
   title = {Environmental Influence on Canopy Phenology in the Dry Tropics},
   author = {Do, Frederic C. and Goudiaby, Venceslas A. and Gimenez, Olivier and Diagne, Amadou L. and Diouf, Mayecor and Rocheteau, Alain and Akpo, Leonard E.},
@@ -1477,6 +1528,23 @@
   number = {5}
 }
 
+@article{houterOntogeneticChangesLeaf2012,
+  title = {Ontogenetic Changes in Leaf Traits of Tropical Rainforest Trees Differing in Juvenile Light Requirement},
+  author = {Houter, Nico C. and Pons, Thijs L.},
+  date = {2012-05-01},
+  journaltitle = {Oecologia},
+  volume = {169},
+  pages = {33--45},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-011-2175-x},
+  url = {https://doi.org/10.1007/s00442-011-2175-x},
+  urldate = {2021-01-04},
+  abstract = {Relationships between leaf traits and the gap dependence for regeneration, and ontogenetic changes therein, were investigated in juvenile and adult tropical rainforest tree species. The juveniles of the 17 species included in the study were grown in high light, similar to the exposed crowns of the adult trees. The traits were structural, biomechanical, chemical and photosynthetic. With increasing species gap dependence, leaf mass per area (LMA) decreased only slightly in juveniles and remained constant in adults, whereas punch strength together with tissue density decreased, and photosynthetic capacity and chlorophyll increased. Contrary to what has been mostly found in evergreen tropical rainforest, the trade-off between investment in longevity and in productivity was evident at an essentially constant LMA. Of the traits pertaining to the chloroplast level, photosynthetic capacity per unit chlorophyll increased with gap dependence, but the chlorophyll a/b ratio showed no relationship. Adults had a twofold higher LMA, but leaf strength was on average only about 50\% larger. Leaf tissue density, and chlorophyll and leaf N per area were also higher, whereas chlorophyll and leaf N per unit dry mass were lower. Ranking of the species, relationships between traits and with the gap dependence of the species were similar for juveniles and adults. However, the magnitudes of most ontogenetic changes were not clearly related to a species’ gap dependence. The adaptive value of the leaf traits for juveniles and adults is discussed.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\2Z3CIBH6\\Houter and Pons - 2012 - Ontogenetic changes in leaf traits of tropical rai.pdf},
+  langid = {english},
+  number = {1}
+}
+
 @article{huangAirTemperatureOptima2019,
   title = {Air Temperature Optima of Vegetation Productivity across Global Biomes},
   author = {Huang, Mengtian and Piao, Shilong and Ciais, Philippe and Peñuelas, Josep and Wang, Xuhui and Keenan, Trevor F. and Peng, Shushi and Berry, Joseph A. and Wang, Kai and Mao, Jiafu and Alkama, Ramdane and Cescatti, Alessandro and Cuntz, Matthias and De Deurwaerder, Hannes and Gao, Mengdi and He, Yue and Liu, Yongwen and Luo, Yiqi and Myneni, Ranga B. and Niu, Shuli and Shi, Xiaoying and Yuan, Wenping and Verbeeck, Hans and Wang, Tao and Wu, Jin and Janssens, Ivan A.},
@@ -1596,6 +1664,24 @@
   urldate = {2020-12-24},
   abstract = {Because rates of migration and genetic adaptation are slow, individual trees must initially acclimate to climate change via individual-level plasticity. Therefore, when predicting distribution and persistence of tree species under future climate change scenarios, we must take into account geographical variation in intra-individual plasticity. Here, we investigated geographical variation of intra-individual plasticity of Fagus crenata Blume (Japanese beech), a dominant species in late-successional, cool-temperate forests of Japan. We compared within-crown variation of leaf morphology (intra-crown leaf plasticity, ILP) among 13 sites across the full distribution range of F. crenata. Generally, ILP was lower for trees in the Pacific than Japan-Sea genetic lineages, low for trees in southern sites, and high for trees in sites near the northern and altitudinal range edges. Among the 13 sites, ILP was correlated with environmental variables associated with temperature. Positive correlation between ILP and temperature variation suggested that environmental perturbation selects for high intra-individual plasticity near northern and altitudinal range edges where F. crenata is expanding its distribution range. On the other hand, low ILP of trees in Pacific and southern sites, comprising geographically isolated populations, may reflect low acclimation potential to environmental perturbation. This could lead to local extinction if climatic conditions exceed the range of tolerance resulting in retreat of the Pacific and southern range edges of F. crenata in Japan.},
   keywords = {Acclimation,Distribution range,Geographical variation,Habitat fragmentation,Leaf functional trait,Local adaptation},
+  langid = {english}
+}
+
+@incollection{jarvisStomatalControlTranspiration1986,
+  title = {Stomatal {{Control}} of {{Transpiration}}: {{Scaling Up}} from {{Leaf}} to {{Region}}},
+  shorttitle = {Stomatal {{Control}} of {{Transpiration}}},
+  booktitle = {Advances in {{Ecological Research}}},
+  author = {Jarvis, P. G. and McNaughton, K. G.},
+  editor = {MacFadyen, A. and Ford, E. D.},
+  date = {1986-01-01},
+  volume = {15},
+  pages = {1--49},
+  publisher = {{Academic Press}},
+  doi = {10.1016/S0065-2504(08)60119-1},
+  url = {http://www.sciencedirect.com/science/article/pii/S0065250408601191},
+  urldate = {2021-01-04},
+  abstract = {The study of leaf anatomy and of the mechanisms of the opening and closing of stomatal guard cells leads one to suppose that the stomata constitute the main or even the sole regulating system in leaf transpiration. Meteorologists have developed a wide variety of formulae for estimating evaporation from vegetation that are based entirely on weather variables and take no account at all of the species composition or stomatal properties of the transpiring vegetation. These “potential evaporation” formulae are widely and, to a large degree, successfully used for estimating evaporation from vegetation that is not water-stressed. Transpiration depends on stomatal conductance, net radiation receipt and upon air saturation deficit, temperature, and wind speed. Saturation deficit and wind speed vary through leaf boundary layers, through canopies, and through the atmosphere above the canopies. The sensitivity of saturation deficit to changes in stomatal conductance depends on where the saturation deficit is measured. If all of the stomata on a single leaf change aperture in unison, there may be a substantial change in saturation deficit measured at the leaf surface but a negligible change in saturation deficit measured a centimetre or two away, outside the leaf boundary layer.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\6KM2AYMZ\\S0065250408601191.html;C\:\\Users\\Me\\Zotero\\storage\\JC358H6Z\\S0065250408601191.html},
   langid = {english}
 }
 
@@ -1847,6 +1933,32 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\IDGUZNJU\\Larbi et al. - 2015 - Canopy light heterogeneity drives leaf anatomical,.pdf},
   langid = {english},
   number = {2}
+}
+
+@article{lauransFunctionalTraitsTheir2012,
+  title = {Functional Traits and Their Plasticity Predict Tropical Trees Regeneration Niche Even among Species with Intermediate Light Requirements},
+  author = {Laurans, Marilyne and Martin, Olivier and Nicolini, Eric and Vincent, Gregoire},
+  date = {2012},
+  journaltitle = {Journal of Ecology},
+  volume = {100},
+  pages = {1440--1452},
+  issn = {1365-2745},
+  doi = {10.1111/j.1365-2745.2012.02007.x},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2745.2012.02007.x},
+  urldate = {2021-01-04},
+  abstract = {Niche differentiation is a key issue in the current debate on community assembly mechanisms. In highly diverse moist tropical forests, tree species sensitivity to canopy openness is thought to be a major axis in niche differentiation. In the past, the syndrome of traits driving the demographic trade-off involved in the niche-based theory of coexistence has always been established among species situated at the two extremities of the shade-tolerance gradient, even though most tropical tree species have intermediate light requirements. In addition, trait plasticity has seldom been linked to tropical tree species distribution along environmental gradients. This article examines covariations between leaf traits, whole-plant traits and niche parameters among 14 tree species with intermediate light requirements in French Guiana and across a range of canopy openness. Each functional trait measured under field conditions was characterized by a median value and a degree of plasticity expressed under contrasting light regimes. Niche differentiation was characterized in terms of spatial light gradient. We first examined covariations between functional traits then explored to what degree the median value and plasticity in functional traits could predict light niche characteristics at the sapling stage and the ontogenetic change in light availability estimated by adult stature. Leaf mass per area (LMA) was positively correlated with leaf life span (LLS); species with higher LMA and higher LLS displayed lower diameter growth rates (GRs) and lower responsiveness to canopy gap at both whole-plant and population levels. This proved that the relationships previously established over a broader range of species held true within the narrow range of the light requirements covered. Height GR plasticity accounted for 49\% of the variation in light niche optimum. LMA plasticity, unlike LLS plasticity, was significantly correlated with light niche breadth and adult stature. Synthesis. This study demonstrates the relevance of considering the phenotypic plasticity in functional traits in community ecology, particularly for quantifying breadth of species distribution over environmental gradients. Our findings did not support Hubbell's hypothesis of functional equivalence and suggest that even a rather subtle variation in forest canopy disturbance promotes the coexistence of tropical tree species.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2745.2012.02007.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\K3AERHJJ\\Laurans et al. - 2012 - Functional traits and their plasticity predict tro.pdf;C\:\\Users\\Me\\Zotero\\storage\\592I5CLL\\j.1365-2745.2012.02007.html},
+  keywords = {canopy disturbance,determinants of plant community diversity and structure,growth rate,irradiance,leaf life span,leaf mass per area,niche differentiation,phenotypic plasticity,shade tolerance,tropical moist forest},
+  langid = {english},
+  number = {6}
+}
+
+@online{LeafFunctionalTrait,
+  title = {Leaf Functional Trait Variation in a Humid Temperate Forest, and Relationships with Juvenile Tree Light Requirements},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6511228/},
+  urldate = {2021-01-04},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ISQ8DKZ2\\PMC6511228.html}
 }
 
 @article{legnerWithincanopyVariationPhotosynthetic2014,
@@ -2190,6 +2302,15 @@
   pmcid = {PMC2374913}
 }
 
+@incollection{lowmanForestCanopies1995,
+  title = {Forest {{Canopies}}},
+  booktitle = {Endeavour},
+  author = {Lowman, Margaret and Rinker, H. Bruce},
+  date = {1995-01-01},
+  volume = {19},
+  isbn = {978-0-12-457553-0}
+}
+
 @article{luDifferentialResponsesTree2020,
   title = {Differential Responses of Tree Species to a Severe Ice Storm and Their Implications to Forest Composition in the Southeast {{United States}}},
   author = {Lu, Deliang and Pile, Lauren S. and Yu, Dapao and Zhu, Jiaojun and Bragg, Don C. and Wang, G. Geoff},
@@ -2223,6 +2344,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\UP59M2DX\\Lusk et al. - 2013 - Correlates of tree species sorting along a tempera.pdf},
   langid = {english},
   number = {6}
+}
+
+@article{luskGlobalMetaanalysisShows2007,
+  title = {Global Meta-Analysis Shows That Relationships of Leaf Mass per Area with Species Shade Tolerance Depend on Leaf Habit and Ontogeny},
+  author = {Lusk, Christopher H. and Warton, David I.},
+  date = {2007},
+  journaltitle = {New Phytologist},
+  volume = {176},
+  pages = {764--774},
+  issn = {1469-8137},
+  doi = {10.1111/j.1469-8137.2007.02264.x},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8137.2007.02264.x},
+  urldate = {2021-01-04},
+  abstract = {It was predicted that relationships of leaf mass per area (LMA) with juvenile shade tolerance will depend on leaf habit, and on whether species are compared at a common age as young seedlings, or at a common size as saplings. A meta-analysis of 47 comparative studies (372 species) was used to test predictions, and the effect of light environment on this relationship. The LMA of evergreens was positively correlated with shade tolerance, irrespective of ontogeny or light environment. The LMA of young seedlings (≤ 1 yr) of deciduous species in low light was also positively correlated with shade tolerance; more weakly so in high light. By contrast, size-specific comparisons of deciduous saplings gave negative correlations of LMA with shade tolerance. Independent contrasts and cross-species analyses yielded broadly similar results. We conclude that ontogeny strongly influences the relationship of LMA with shade tolerance of deciduous trees, but has little impact on that of evergreens. Size-specific comparisons reveal opposing trends in deciduous and evergreen taxa: the negative relationship of LMA with shade tolerance of deciduous species is probably dominated by interspecific differences in palisade thickness, whereas patterns in evergreens are probably shaped more by the degree of structural reinforcement, linked to wide variation in leaf lifespan.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-8137.2007.02264.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\LXC6BQXL\\Lusk and Warton - 2007 - Global meta-analysis shows that relationships of l.pdf;C\:\\Users\\Me\\Zotero\\storage\\JKGEVYQY\\j.1469-8137.2007.02264.html},
+  keywords = {independent contrasts,leaf traits,light,plant functional types,sapling,seedling,specific leaf area},
+  langid = {english},
+  number = {4}
 }
 
 @article{macekMaximumAirTemperature2019,
@@ -2947,6 +3087,26 @@
   number = {2}
 }
 
+@article{niinemetsControversyTraitsConferring2006a,
+  title = {The Controversy over Traits Conferring Shade-Tolerance in Trees: Ontogenetic Changes Revisited},
+  shorttitle = {The Controversy over Traits Conferring Shade-Tolerance in Trees},
+  author = {Niinemets, Ülo},
+  date = {2006},
+  journaltitle = {Journal of Ecology},
+  volume = {94},
+  pages = {464--470},
+  issn = {1365-2745},
+  doi = {10.1111/j.1365-2745.2006.01093.x},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2745.2006.01093.x},
+  urldate = {2021-01-04},
+  abstract = {1 Successional replacement of intolerant species by shade tolerators along gap-understorey gradients is commonly associated with increasingly higher low-light carbon acquisition capacities of more tolerant species. This doctrine has recently been challenged because of evidence demonstrating larger leaf dry mass per unit area (MA), lower photosynthetic capacities and inferior whole plant relative growth rates (RGR) in both high and low irradiance in seedlings of shade-tolerators. However, as the individuals of shade-tolerant species often need to endure canopy shade for many years before gap formation, testing of the carbon gain hypothesis of shade tolerance requires examination of species carbon gain potentials during the entire plant ontogeny. 2 Light vs. MA relationships throughout ontogeny demonstrate that saplings and canopy individuals of shade tolerators do have lower MA than intolerant species, and moderately higher photosynthetic capacities in low light, resulting in greater whole plant carbon gain capacities at lower light. The apparent discrepancy between results from studies on seedlings vs. saplings/trees is due to MA increasing at a faster rate in shade intolerators during ontogeny. A strong positive linkage between seed size and species shade tolerance further implies that shade tolerators have larger initial size, absolute growth rate and survivorship in low light despite their lower RGR. 3 The evidence reviewed collectively suggests that the carbon balance concept of species’ successional position is valid for both seedlings and saplings, and that the apparent discrepancies in species rankings on the basis of structural and physiological characteristics are driven by variations in initial size and rate of ontogeny. Analyses of species shade tolerance potentials should therefore consider how any suite of adaptive traits varies with ontogeny.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2745.2006.01093.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MJ57KB3X\\Niinemets - 2006 - The controversy over traits conferring shade-toler.pdf;C\:\\Users\\Me\\Zotero\\storage\\KTH2A3WI\\j.1365-2745.2006.01093.html},
+  keywords = {absolute growth rate,leaf structure,light availability,minimum light requirement,photosynthetic capacity,plant ontogeny,relative growth rate,shade tolerance,vegetation dynamics},
+  langid = {english},
+  number = {2}
+}
+
 @article{niinemetsHowLightTemperature2015,
   title = {How Light, Temperature, and Measurement and Growth [{{CO2}}] Interactively Control Isoprene Emission in Hybrid Aspen},
   author = {Niinemets, Ülo and Sun, Zhihong},
@@ -2978,6 +3138,24 @@
   url = {http://link.springer.com/10.1007/s10265-016-0815-2},
   urldate = {2020-08-30},
   file = {C\:\\Users\\Me\\Zotero\\storage\\FHVMNIIQ\\Niinemets - 2016 - Leaf age dependent changes in within-canopy variat.pdf},
+  langid = {english},
+  number = {3}
+}
+
+@article{niinemetsLeafAgeDependent2016b,
+  title = {Leaf Age Dependent Changes in Within-Canopy Variation in Leaf Functional Traits: A Meta-Analysis},
+  shorttitle = {Leaf Age Dependent Changes in Within-Canopy Variation in Leaf Functional Traits},
+  author = {Niinemets, Ülo},
+  date = {2016-05-01},
+  journaltitle = {J Plant Res},
+  volume = {129},
+  pages = {313--338},
+  issn = {1618-0860},
+  doi = {10.1007/s10265-016-0815-2},
+  url = {https://doi.org/10.1007/s10265-016-0815-2},
+  urldate = {2021-01-04},
+  abstract = {Within-canopy variation in leaf structural and photosynthetic characteristics is a major means by which whole canopy photosynthesis is maximized at given total canopy nitrogen. As key acclimatory modifications, leaf nitrogen content (NA) and photosynthetic capacity (AA) per unit area increase with increasing light availability in the canopy and these increases are associated with increases in leaf dry mass per unit area (MA) and/or nitrogen content per dry mass and/or allocation. However, leaf functional characteristics change with increasing leaf age during leaf development and aging, but the importance of these alterations for within-canopy trait gradients is unknown. I conducted a meta-analysis based on 71 canopies that were sampled at different time periods or, in evergreens, included measurements for different-aged leaves to understand how within-canopy variations in leaf traits (trait plasticity) depend on leaf age. The analysis demonstrated that in evergreen woody species, MA and NA plasticity decreased with increasing leaf age, but the change in AA plasticity was less suggesting a certain re-acclimation of AA to altered light. In deciduous woody species, MA and NA gradients in flush-type species increased during leaf development and were almost invariable through the rest of the season, while in continuously leaf-forming species, the trait gradients increased constantly with increasing leaf age. In forbs, NA plasticity increased, while in grasses, NA plasticity decreased with increasing leaf age, reflecting life form differences in age-dependent changes in light availability and in nitrogen resorption for growth of generative organs. Although more work is needed to improve the coverage of age-dependent plasticity changes in some plant life forms, I argue that the age-dependent variation in trait plasticity uncovered in this study is large enough to warrant incorporation in simulations of canopy photosynthesis through the growing period.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\GQ3PVDCQ\\Niinemets - 2016 - Leaf age dependent changes in within-canopy variat.pdf},
   langid = {english},
   number = {3}
 }
